[project]
name = "llamaindex-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-mcp>=0.4.0",
    "ipykernel>=6.30.1",
    "linkup-sdk>=0.5.0",
    "llama-index>=0.14.2",
    "llama-index-llms-ollama>=0.7.3",
    "llama-index-tools-mcp>=0.4.1",
    "mcp[cli]>=1.14.1",
]
