[project]
name = "mcp-agentic-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi-mcp>=0.4.0",
    "tqdm>=4.67.1",
    "qdrant-client>=1.15.1",
    "llama-index-embeddings-huggingface>=0.6.1",
    "einops>=0.8.1",
    "notebook>=7.4.5",
]
